--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>React :: CSS Modules :: PostCSS :: JSPM</title>
   </head>
 
-  <body>
+  <body class="bgGrey">
     <div id="app"></div>
 
     <script src="jspm_packages/system.js"></script>
